Add live search and live URL preview to listing tool
## Features Added

### Live Search (index.html + index.js + index.css)
- Added search input field with pirate-themed styling
- Real-time filtering of merchants while typing
- Searches both merchant names and descriptions
- Works in combination with existing tag filters
- Displays result counter showing 'X of Y merchants'
- Shows 'no results' message when applicable
- Orange accent colors matching pirate theme

### Live URL Preview (listing_tool.html + merchant.js)
- Removed 'Add Link URL' button (no longer needed)
- URL now updates automatically in preview while typing
- Shows validation status (valid/invalid URL)
- Displays placeholder text when field is empty
- Real-time color feedback (orange for valid, red for invalid)

## Files Modified
- index.html: Added search input container and results info div
- assets/css/index.css: Added search bar styling with pirate theme
- assets/js/index.js: Implemented searchMerchants() and updateSearchInfo()
- listing_tool.html: Removed URL button, added oninput to URL field
- assets/js/merchant.js: Enhanced updateMerchantURL() with live feedback

## Testing
- Tested locally with Jekyll
- Search works on all 162 merchants
- URL preview updates instantly

--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@ javascript-list:
   <div class="content">
     <img class="pah" src="{{ site.baseurl }}/button/button0.png" alt="Pirate Chain (ARRR) Accepted here button" />
     <h2>Merchant Directory</h2>
-    
+    <!-- Search Bar -->
+<div class="search-container">
+ <input type="text" 
+       id="merchant-search" 
+       placeholder="Search the fleet... (name, description, services)" 
+       onkeyup="searchMerchants()">
+  <div id="search-results-info"></div>
+</div>
     <div id="tag-buttons">
       <h2>Viewing: <span id="current_tag">All</span></h2>
       {% assign sortedTags = site.data.tags | sort: 'name' %}
